# embedded_startup

./: -  CMakeLists.txt  README.md  flake.nix
cmake/: toolchain.cmake
startup/: linker.ld  startup.c
